fix: replace current JAR on update and fix release notes dialog